--- a/src/www/templates/tabs.html
+++ b/src/www/templates/tabs.html
@@ -1,27 +1,27 @@
 <!-- 
-  Create tabs with an icon and label, using the tabs-positive style. 
+  Each <ion-nav-buttons> directive will render buttons 
+  onto the navbar's corresponding side
+-->
+<ion-nav-buttons side="left">
+  <button class="button button-icon" ng-click="toggleProjects()">
+    <i class="icon ion-navicon"></i>
+  </button>
+</ion-nav-buttons>
+<ion-nav-buttons side="right">
+  <button class="button button-icon" ng-click="newTask()">
+    <i class="icon ion-compose"></i>
+  </button>
+</ion-nav-buttons>
+
+<!-- 
   Each tab's child <ion-nav-view> directive will have its own 
   navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top">
-
-
-  <!-- Pets Tab -->
-  <ion-tab title="Dashboard" icon="icon ion-home" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+<ion-tabs class="tabs-icon-only">
+  <ion-tab title="List" icon="icon ion-grid" href="#/projects/{{activeProjectId}}/list">
+    <ion-nav-view name="list-tab"></ion-nav-view>
   </ion-tab>
-
-
-  <!-- Adopt Tab -->
-  <ion-tab title="Friends" icon="icon ion-heart" href="#/tab/friends">
-    <ion-nav-view name="tab-friends"></ion-nav-view>
+  <ion-tab title="Map" icon="icon ion-map" href="#/projects/{{activeProjectId}}/map">
+    <ion-nav-view name="map-tab"></ion-nav-view>
   </ion-tab>
-
-
-  <!-- About Tab -->
-  <ion-tab title="Account" icon="icon ion-gear-b" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
-  </ion-tab>
-
-
 </ion-tabs>
