Leafletjs map test

--- a/src/www/templates/tab-map.html
+++ b/src/www/templates/tab-map.html
@@ -1,5 +1,5 @@
-<ion-view title="{{activeProject.title}} tasks map">
+<ion-view id="tab-map" title="{{activeProject.title}} tasks map">
   <ion-content has-header="true">
-    INSERT MAP HERE
+    <div id="map" ng-controller="MapCtrl"></div>
   </ion-content>
 </ion-view>
