--- a/src/www/templates/tab-list.html
+++ b/src/www/templates/tab-list.html
@@ -1,4 +1,4 @@
-<ion-view title="{{activeProject.title}} tasks">
+<ion-view  id="tab-list" title="{{activeProject.title}} tasks">
   <ion-content has-header="true" scroll="false">
     <ion-list>
       <ion-item ng-repeat="task in activeProject.tasks">
