--- a/src/www/templates/menu.html
+++ b/src/www/templates/menu.html
@@ -6,7 +6,7 @@
   </ion-header-bar>
   <ion-content scroll="false">
     <ion-list>
-      <ion-item ng-repeat="project in projects" ng-click="selectProject(project, $index)" ng-class="{active: activeProjectId == $index}">
+      <ion-item ng-repeat="project in projects" ng-click="selectProject(project)" ng-class="{active: project.id == activeProjectId}">
         {{project.title}}
       </ion-item>
     </ion-list>
