--- a/src/www/templates/tab-list.html
+++ b/src/www/templates/tab-list.html
@@ -1,6 +1,6 @@
 <ion-view  id="tab-list" title="{{activeProject.title}} tasks">
   <ion-content has-header="true" scroll="false">
-    <ion-list>
+    <ion-list id="tasks-list">
       <ion-item ng-repeat="task in activeProject.tasks">
         {{task.title}}
       </ion-item>
