Tasks location using Leafletjs

--- a/src/www/templates/new-task.html
+++ b/src/www/templates/new-task.html
@@ -13,6 +13,9 @@
         <label class="item item-input">
           <input type="text" placeholder="What do you need to do?" ng-model="task.title">
         </label>
+        <label class="item item-input">
+          <input type="text" placeholder="Where?" ng-model="task.address">
+        </label>
       </div>
       <div class="padding">
         <button type="submit" class="button button-block button-positive">Create Task</button>
