--- a/src/www/templates/tabs.html
+++ b/src/www/templates/tabs.html
@@ -3,12 +3,12 @@
   onto the navbar's corresponding side
 -->
 <ion-nav-buttons side="left">
-  <button class="button button-icon" ng-click="toggleProjects()">
+  <button id="toggle-projects" class="button button-icon" ng-click="toggleProjects()">
     <i class="icon ion-navicon"></i>
   </button>
 </ion-nav-buttons>
 <ion-nav-buttons side="right">
-  <button class="button button-icon" ng-click="newTask()">
+  <button id="new-task" class="button button-icon" ng-click="newTask()">
     <i class="icon ion-compose"></i>
   </button>
 </ion-nav-buttons>
